--- a/public/punto.html
+++ b/public/punto.html
@@ -72,9 +72,9 @@
         </form>
 
         <div class="menu-interactivo">
-            <a href="#" class="a-menu" id="btn-alimentos">Alimentos</a>
+            <a href="#" class="a-menu" id="btn-alimentos">Comidas</a>
             <a href="#" class="a-menu" id="btn-bebidas">Bebidas</a>
-            <a href="#" class="a-menu">Snacks</a>
+            <a href="#" class="a-menu" id="btn-snacks">Snacks</a>
             <a href="#" class="a-menu">Frutas</a>
             <a href="#" class="a-menu">Otros</a>
         </div>
@@ -82,6 +82,7 @@
         <div class="menu-completo">
             <div class="alimentos-list" id="alimentos-list"></div>
             <div class="bebidas-list" id="bebidas-list"></div>
+            <div class="snacks-list" id="snacks-list"></div>
         </div>
     </main>
     <script>
